--- a/hw-2/task4/style.css
+++ b/hw-2/task4/style.css
@@ -34,13 +34,13 @@ img {
 	margin-right: 20px;
 }
 
-section {
+main {
 	display: flex;
 	justify-content: space-between;
   	height: 500px;
 }
 
-section div {
+main div {
 	background-color: rgb(180, 180, 180);
 	border: 1px solid rgb(40, 40, 40);
 	padding: 20px;
